# MrWSI

./: .gitignore  ;  Dockerfile  README.md  env.sh  requirements.txt  setup.py  test.py  test_mrkt.py  test_mrkt_batch.py
MrWSI/: simulation.py
MrWSI/algorithms/: ca_eft.py  heft.py
MrWSI/algorithms/homogeneous/: __init__.py  base.py  ca.py  ca2.py  ca3.py  ca4.py  can.py  (+8 more)
MrWSI/core/: CMakeLists.txt  bin.c  bin.pxd  bin.pyx  platform.py  problem.c  problem.pxd  problem.pyx  resource.c  resource.pxd  resource.pyx  schedule.py
MrWSI/core/src/: CMakeLists.txt  bin.c  mempool.c  platform.c  problem.c  resource.c
MrWSI/simulation/: base.py  common.py  fair.py  fcfs.py
MrWSI/utils/: ccr_mdf.py  dax2wrk.py  dot2wrk.py  plot.py  randag.py
res_ar/: batch.sh  batch_mrkt.sh  proc.py
resources/daggen/: daggen  gen.py
resources/raw/: CyberShake_100.wrk  CyberShake_1000.wrk  CyberShake_30.wrk  CyberShake_50.wrk  Epigenomics_100.wrk  Epigenomics_24.wrk  Epigenomics_46.wrk  Epigenomics_997.wrk  Inspiral_100.wrk  Inspiral_1000.wrk  Inspiral_30.wrk  Inspiral_50.wrk  Montage_100.wrk  Montage_1000.wrk  Montage_25.wrk  Montage_50.wrk  Sipht_100.wrk  Sipht_1000.wrk  Sipht_30.wrk  Sipht_60.wrk
resources/workflows/: .gitignore  CyberShake_100.wrk  CyberShake_1000.wrk  CyberShake_30.wrk  CyberShake_50.wrk  Epigenomics_100.wrk  Epigenomics_24.wrk  Epigenomics_46.wrk  Epigenomics_997.wrk  Inspiral_100.wrk  Inspiral_1000.wrk  Inspiral_30.wrk  Inspiral_50.wrk  Montage_100.wrk  Montage_1000.wrk  Montage_25.wrk  Montage_50.wrk  Sipht_100.wrk  Sipht_1000.wrk  Sipht_30.wrk  Sipht_60.wrk
(+20217 files in other folders)
